--- a/ForJob/ForJob.vcxproj
+++ b/ForJob/ForJob.vcxproj
@@ -91,6 +91,9 @@
     <ClCompile Include="MicroSoft2015\hiho1095.cpp" />
     <ClCompile Include="test.cpp" />
     <ClCompile Include="testbd.cpp" />
+    <ClCompile Include="初赛1-1 AC代码.cpp" />
+    <ClCompile Include="初赛1-2 AC代码.cpp" />
+    <ClCompile Include="初赛1-3 AC代码.cpp" />
     <ClCompile Include="初赛1.cpp" />
     <ClCompile Include="初赛2.cpp" />
     <ClCompile Include="初赛3.cpp" />
