--- a/ForJob/ForJob.vcxproj.filters
+++ b/ForJob/ForJob.vcxproj.filters
@@ -90,7 +90,6 @@
     <ClCompile Include="初赛2.cpp">
       <Filter>Source Files\编程之美2015</Filter>
     </ClCompile>
-<<<<<<< HEAD
     <ClCompile Include="TX1_20150906.cpp">
       <Filter>Source Files\腾讯2016校招在线笔试</Filter>
     </ClCompile>
@@ -99,7 +98,7 @@
     </ClCompile>
     <ClCompile Include="TX3_20150906.cpp">
       <Filter>Source Files\腾讯2016校招在线笔试</Filter>
-=======
+    </ClCompile>
     <ClCompile Include="初赛1-1 AC代码.cpp">
       <Filter>Source Files\编程之美2015</Filter>
     </ClCompile>
@@ -108,7 +107,6 @@
     </ClCompile>
     <ClCompile Include="初赛1-3 AC代码.cpp">
       <Filter>Source Files\编程之美2015</Filter>
->>>>>>> origin/master
     </ClCompile>
   </ItemGroup>
 </Project>
